fixed icons archon-blue color & its vertical alignment

--- a/src/app/workspace-services/workspace-services.component.css
+++ b/src/app/workspace-services/workspace-services.component.css
@@ -109,15 +109,15 @@ h2 {
 
 .card-reveal{
   text-align: left;
-  padding:24px;
-  position:absolute;
+  padding: 20px 10px 20px 20px;
+  position: absolute;
   background-color:#fff;
-  width:100%;
-  overflow-y:auto;
-  left:0;
-  top:100%;
-  height:100%;
-  z-index:3;
+  width: 100%;
+  overflow-y: auto;
+  left: 0;
+  top: 100%;
+  height: 100%;
+  z-index: 3;
   -webkit-transition-property: top; /* Safari */
   -webkit-transition-duration: 0.2s; /* Safari */
   transition-property: top;
@@ -127,6 +127,6 @@ h2 {
   top: 0;
 }
 .card-toggle{
-  cursor:pointer;
+  cursor: pointer;
   padding: 0px 10px 0 0;
 }
